@@ -13,86 +13,6 @@
 final class MapsMapper {
 	
 	/**
-	 * Determines if a value is a valid map dimension, and optionally corrects it.
-	 *
-	 * TODO: move to param validation and manipulation classes
-	 *
-	 * @since 0.6
-	 *
-	 * @param string or number $value The value as it was entered by the user.
-	 * @param string $dimension Must be width or height.
-	 * @param boolean $correct If true, the value will be corrected when invalid. Defaults to false.
-	 * @param number $default The default value for this dimension. Must be set when $correct = true.
-	 *
-	 * @return boolean
-	 */
-	public static function isMapDimension( &$value, $name, array $parameters, $dimension, $correct = false, $default = 0 ) {
-		global $egMapsSizeRestrictions;
-
-		// See if the notation is valid.
-		if ( !preg_match( '/^\d+(\.\d+)?(px|ex|em|%)?$/', $value ) ) {
-			if ( $correct ) {
-				$value = $default;
-			} else {
-				return false;
-			}
-		}
-
-		// Determine the minimum and maximum values.
-		if ( preg_match( '/^.*%$/', $value ) ) {
-			if ( count( $egMapsSizeRestrictions[$dimension] ) >= 4 ) {
-				$min = $egMapsSizeRestrictions[$dimension][2];
-				$max = $egMapsSizeRestrictions[$dimension][3];
-			} else {
-				// This is for backward compatibility with people who have set a custom min and max before 0.6.
-				$min = 1;
-				$max = 100;
-			}
-		} else {
-			$min = $egMapsSizeRestrictions[$dimension][0];
-			$max = $egMapsSizeRestrictions[$dimension][1];
-		}
-
-		// See if the actual value is withing the limits.
-		$number = preg_replace( '/[^0-9]/', '', $value );
-		if ( $number < $min ) {
-			if ( $correct ) {
-				$value = $min;
-			} else {
-				return false;
-			}
-		} else if ( $number > $max ) {
-			if ( $correct ) {
-				$value = $max;
-			} else {
-				return false;
-			}
-		}
-
-		// If this is a 'correct the value call', add 'px' if no unit has been provided.
-		if ( $correct ) {
-			if ( !preg_match( '/(px|ex|em|%)$/', $value ) ) {
-				$value .= 'px';
-			}
-		}
-
-		return true;
-	}
-
-	/**
-	 * Corrects the provided map demension value when not valid.
-	 *
-	 * @since 0.6
-	 *
-	 * @param string or number $value The value as it was entered by the user.
-	 * @param string $dimension Must be width or height.
-	 * @param number $default The default value for this dimension.
-	 */
-	public static function setMapDimension( &$value, $name, array $parameters, $dimension, $default ) {
-		self::isMapDimension( $value, $name, $parameters, $dimension, true, $default );
-	}
-	
-	/**
 	 * Add a JavaScript file out of skins/common, or a given relative path.
 	 * 
 	 * This is a copy of the native function in OutputPage to work around a pre MW 1.16 bug.
@@ -209,8 +129,8 @@ final class MapsMapper {
 	 */
 	public static function getImageUrl( $image ) {
 		$title = Title::newFromText( $image, NS_FILE );
-		
-		if ( $title->getNamespace() == NS_FILE && $title->exists() ) {
+
+		if ( !is_null( $title ) && $title->getNamespace() == NS_FILE && $title->exists() ) {
 			$imagePage = new ImagePage( $title );
 			$image = $imagePage->getDisplayedFile()->getURL();
 		}		
