@@ -148,16 +148,7 @@ abstract class MapsBasePointMap {
 			}
 			
 			if ( $markerData['icon'] != '' ) {
-				if ( strpos( $markerData['icon'], ':' ) === false ) {
-					$markerData['icon'] = 'File:' . $markerData['icon'];
-				}			
-				
-				$title = Title::newFromText( $markerData['icon'] );
-
-				if ( !is_null( $title ) && $title->exists() ) {
-					$iconImagePage = new ImagePage( $title );
-					$markerData['icon'] = $iconImagePage->getDisplayedFile()->getURL();
-				}
+				$markerData['icon'] = MapsMapper::getImageUrl( $markerData['icon'] );
 			}
 			
 			// Temporary fix, will refactor away later
